# cwiid

./: Makefile.in  configure.ac  defs.mak.in
common/include/: appcpp.mak  depcpp.mak  lib.mak.in
debian/: changelog  control  control.in  copyright  libcwiid1-dev.install  rules  watch  wmgui-maemo.install
debian/menus/: wmgui-maemo.desktop
libcwiid/: Makefile.in  backgroundconnect.c  cwiid.h  cwiid_internal.h  marshal.list  thread.c
wmgui-maemo/: Makefile.in  buttonframe.cpp  buttonframe.h  common.h  main.c  main.cpp  mainwindow.cpp  mainwindow.h  motionsensorframe.cpp  motionsensorframe.h  wiimote.cpp  wiimote.h  wiimotehandler.cpp  wiimotehandler.h  wiimoteobserver.h
